# flashattn.rs

./: .gitignore  Cargo.toml  build.rs
kernels/: flash_api_dispatch.cu  flash_api_impl.h  flash_api_sm80.cu  flash_api_sm80_softcap.cu  flash_api_sm90.cu  flash_api_sm90_softcap.cu  flash_fwd_launch_template.h
src/: ffi.rs  lib.rs
