[package]
name = "flashattn-rs"
version = "0.1.0"
edition = "2021"
description = "Flash attention V2/V3 for huggingface candle ecosystem."
keywords = ["flash-attention", "rust", "candle"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "5bed038", features = ["cuda"] }
half = { version = "2.3.1", features = ["num-traits"] }
once_cell = "1.21.3"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cudaforge = "0.1.5"

[features]
flash-decoding = []
flash-context = []
